# tabular-learning

./: .gitignore  README.md  pyproject.toml
documentation/: development_plan.txt  tech_task.txt  tech_task_improved.txt
expected_usage_examples/: 01_cv_mlp_xgboost_binary.py  02_cv_mlp_xgboost_regression.py  03_cv_mlp_xgboost_multiclass.py  04_cv_mlp_custom_hp_xgboost_binary.py  05_cv_mlp_xgboost_custom_hp_binary.py  06_cv_mlp_ridge_regression.py  07_cv_mlp_custom_class_binary.py  08_single_mlp_xgboost_binary.py  09_cv_tabtransformer_xgboost_binary.py  10_cv_tabtransformer_custom_hp_xgb_binary.py  11_cv_tabnet_ridge_regression.py  12_cv_category_embedding_custom_class_multiclass.py  README.txt
hybrid_embed/: config.py  utils.py
tests/: test_config.py
usage_examples/: category_embedding_catboost.py  category_embedding_elastic_net.py  category_embedding_extra_trees.py  category_embedding_lightgbm.py  category_embedding_logistic_regression.py  category_embedding_random_forest.py  category_embedding_ridge.py  category_embedding_xgboost.py  gate_catboost.py  gate_elastic_net.py  gate_extra_trees.py  gate_lightgbm.py  gate_logistic_regression.py  gate_random_forest.py  gate_ridge.py  gate_xgboost.py  mlp_catboost.py  mlp_elastic_net.py  mlp_extra_trees.py  mlp_lightgbm.py  mlp_logistic_regression.py  mlp_random_forest.py  mlp_ridge.py  mlp_xgboost.py  tab_transformer_catboost.py  tab_transformer_elastic_net.py  tab_transformer_extra_trees.py  tab_transformer_lightgbm.py  tab_transformer_logistic_regression.py  tab_transformer_random_forest.py  tab_transformer_ridge.py  (+9 more)
(+32 files in other folders)
